--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> <header>SUNDAY JOSEPH .A</header></h1>
         <h2>DIRECTOR OF SEO CONTENT</h2>
-           <img src="./Capstone Project1/assets/images/joe hshort new.png" alt="joseph sunday picture"/>
+           <img src="./assets/images/joe hshort new.png" alt="joseph sunday picture"/>
     
         <h2>Summary</h2>
               <p>Experienced and results-driven content SEO manager with a strong background in 
@@ -80,8 +80,8 @@
         <h2>Others</h2>
         <hr/>
         <ul>
-          <li> <a href="./Capstone Project1/public/contact.html">Contact me</a></li>
-          <li> <a href="./Capstone Project1/public/hobbies.html">My Hobbies</a></li>
+          <li> <a href="./public/contact.html">Contact me</a></li>
+          <li> <a href="./public/hobbies.html">My Hobbies</a></li>
         </ul>
 
 </body>
